@@ -128,6 +128,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #21815: Accept ] characters in the data portion of imap responses,
+  in order to handle the flags with square brackets accepted and produced
+  by servers such as gmail.
+
 - Issue #25447: fileinput now uses sys.stdin as-is if it does not have a
   buffer attribute (restores backward compatibility).
 
